--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@mui/material": "^5.15.13",
         "eslint-plugin-react": "^7.34.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
