--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -1,4 +1,4 @@
-name: App CI
+name: CV CI
 
 on:
   push:
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x, 20.x]
+        node-version: [20.x]
 
     steps:
     - uses: actions/checkout@v2
